# sensorlib

./: CMakeLists.txt  README.md
arduino/: README.md
arduino/example/: potentiometer.ino
arduino/src/sensor/: library.properties  sensorlib.h
include/: FunctionalSensor.h  Percentage.h  RangeCalculator.h  Sensor.h
include/sensor/: BasicRangeCalculator.h  CMakeLists.txt  FunctionalSensor.cpp
src/sensor/: BasicRangeCalculator.cpp  FunctionalSensor.cpp  FunctionalSensor.h  Sensor.h
test/: CMakeLists.txt
test/lib/googletest/googletest/src/: gtest.cc
test/run/: percent_test.cc  sensor_capture_test.cc
test/run/mock/: mockcontrolpanelfunctions.cc
